--- a/FDS/pom.xml
+++ b/FDS/pom.xml
@@ -1,9 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>bjc</groupId>
 	<artifactId>FDS</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
 	<name>FDisk Script</name>
 	<description>A simpe command/control language inspired by the imitable interface of FDisk</description>
 	<build>
@@ -34,4 +32,10 @@
 			<version>0.1.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
+	<parent>
+		<groupId>bjc</groupId>
+		<artifactId>FDS-Container</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+		<relativePath>../../FDS-Container/FDS-Container</relativePath>
+	</parent>
 </project>
