--- a/FDS/pom.xml
+++ b/FDS/pom.xml
@@ -31,6 +31,11 @@
 			<artifactId>BJC-Utils2</artifactId>
 			<version>0.1.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>bjc</groupId>
+			<artifactId>inflexion</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 	<parent>
 		<groupId>bjc</groupId>
